--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,61 @@
 @charset "utf-8";
 
-*{
+* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
-a{
+a {
   text-decoration: none;
-  color:#fff
+  color: #fff
 }
 
-body{
+body {
   margin: 0;
   padding: 0;
   width: 100%;
   text-align: left;
   line-height: 1.8;
   font-family: "UD デジタル 教科書体 N-B";
-  color:#fff;
+  color: #fff;
 }
 
-.container{
-  margin:0 auto;
+.container {
+  margin: 0 auto;
   padding: 0 10px;
 }
 
 /* バックグラウンドにディープピンクストライプ */
-
-header, footer{
+header, footer {
   background: url(../media/bg_dp_st.png) repeat;
 }
 
-footer>.container{
+footer>.container {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
 }
 
-@media screen and (min-width:768px){
-  .container{
+@media screen and (min-width:768px) {
+  .container {
     padding: 0 30px;
     width: 1170px;
   }
 
-  header, footer{
+  header, footer {
     min-width: 1170px;
   }
 
   /* flexプロパティたち */
-
   .gnav>ul,
   header>.container,
-  .footer_content{
+  .footer_content {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
@@ -67,28 +65,26 @@ footer>.container{
 /* ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 ヘッダー
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ */
-
-header{
+header {
   height: 84px;
 }
 
-.logo{
+.logo {
   padding-top: 14px;
   margin: 0 auto;
   width: 160px;
 }
 
-.logo img{
+.logo img {
   width: 100%;
 }
 
-
-.gnav{
+.gnav {
   position: fixed;
   top: 5px;
   right: -768px;
   padding: 18px 0 5px;
-  border:3px solid #f172a4;
+  border: 3px solid #f172a4;
   border-radius: 10px;
   width: 768px;
   background: #e52d77;
@@ -96,19 +92,19 @@ header{
   opacity: 0;
 }
 
-.gnav ul{
+.gnav ul {
   font-size: 14px;
   margin: 20px;
   border-top: 2px solid #f172a4;
   width: 200px;
 }
 
-.gnav li{
-    padding: 16px 0 16px 2px;
-    border-bottom: 2px solid #f172a4
+.gnav li {
+  padding: 16px 0 16px 2px;
+  border-bottom: 2px solid #f172a4
 }
 
-.gnav::before{
+.gnav::before {
   display: block;
   content: '';
   background: url(../media/logo.png) no-repeat;
@@ -120,7 +116,8 @@ header{
 
 .hamburger-btn {
   display: block;
-  position: fixed;    /* bodyに対しての絶対位置指定 */
+  position: fixed;
+  /* bodyに対しての絶対位置指定 */
   right: 15px;
   top: 18px;
   width: 46px;
@@ -134,25 +131,25 @@ header{
 
 .hamburger-btn span {
   display: block;
-      position: absolute;
-      height: 3px;
-      width: 25px;
-      background: #FFF;
-      left: 10px;
-      border-radius: 1px;
-      transition: .35s ease-in-out;
+  position: absolute;
+  height: 3px;
+  width: 25px;
+  background: #FFF;
+  left: 10px;
+  border-radius: 1px;
+  transition: .35s ease-in-out;
 }
 
 .hamburger-btn span:nth-child(1) {
-    top: 13px;
+  top: 13px;
 }
 
 .hamburger-btn span:nth-child(2) {
-    top: 21px;
+  top: 21px;
 }
 
 .hamburger-btn span:nth-child(3) {
-    top: 29px;
+  top: 29px;
 }
 
 .hamburger-btn.active span:nth-child(1) {
@@ -160,95 +157,100 @@ header{
   transform: rotate(315deg);
 }
 
-.hamburger-btn.active span:nth-child(2){
+.hamburger-btn.active span:nth-child(2) {
   width: 0;
   left: 50%;
 }
+
 .hamburger-btn.active span:nth-child(3) {
   top: 21px;
   transform: rotate(-315deg);
 }
+
 .hamburger-btn-not-on-header {
-    box-shadow: 0 0 0 3px #FFF;
-    background-color: #e52d77;
-}
-.gnav-open{
-    transform: translateX(-240px);
-    opacity: 1;
+  box-shadow: 0 0 0 3px #FFF;
+  background-color: #e52d77;
 }
 
-@media screen and (min-width:768px){
-  header>.container{
+.gnav-open {
+  transform: translateX(-240px);
+  opacity: 1;
+}
+
+@media screen and (min-width:768px) {
+  header {
+    position: fixed;
+  }
+  header>.container {
     justify-content: space-between;
   }
 
-  .logo{
+  .logo {
     margin: 0;
     width: 190px;
     height: 57px;
   }
 
   .hamburger-btn,
-  .gnav::before{
+  .gnav::before {
     display: none;
   }
 
   .gnav,
   .gnav ul,
-  .gnav li{
-    border:none;
+  .gnav li {
+    border: none;
   }
 
-  .gnav{
+  .gnav {
     position: static;
     opacity: 1;
     padding: 0;
-    width:auto;
+    width: auto;
     background: none;
   }
 
-  .gnav ul{
+  .gnav ul {
     margin: 0 20px 0 0;
     width: 680px;
   }
 
-  .gnav li{
+  .gnav li {
     display: block;
     padding: 0 10px;
   }
 
-  .gnav a{
+  .gnav a {
     line-height: 84px;
     padding: 0;
     font-size: 15px;
   }
 
-  .gnav-open{
-      transform: none;
+  .gnav-open {
+    transform: none;
   }
 }
 
 /* ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 フッター
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ */
-
-footer>.container{
+footer>.container {
   height: 363px;
   justify-content: space-between;
 }
 
-.footer_banner>*{
+.footer_banner>* {
   display: block;
   padding-top: 10px;
 }
 
-.footer_cafe{
+.footer_cafe {
   border-radius: 10px;
   box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.15);
   width: 261px;
 }
 
-.footer_twitter a{
+.footer_twitter a {
   display: inline-block;
   border-radius: 10px;
   background-color: #FFF;
@@ -260,73 +262,76 @@ footer>.container{
   color: #00aced;
   box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.15);
 }
-.footer_twitter p{
+
+.footer_twitter p {
   display: inline-block;
   text-align: center;
   font-size: 1.5em;
   padding-left: 20%;
 }
 
-.fa-twitter{
+.fa-twitter {
   display: inline-block;
   padding: 16px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   background-color: #00aced;
-  color:#fff;
+  color: #fff;
   font-size: 1.8em;
 }
 
-.footer_nav_ul{
+.footer_nav_ul {
   margin-top: 15px;
   margin-left: 2em;
 }
 
-.footer_nav_ul .fa-external-link-alt{
+.footer_nav_ul .fa-external-link-alt {
   margin-left: -1.5em;
   margin-right: 0.5em;
 }
 
-.footer_nav_ul a{
+.footer_nav_ul a {
   font-size: 0.8em;
   text-decoration: underline;
 }
 
-.footer_logos{
+.footer_logos {
   margin-top: 15px;
   width: 110px;
 }
 
-.footer_logos img{
+.footer_logos img {
   width: 100%;
 }
 
-.footer_logos p{
+.footer_logos p {
   font-size: 0.8em;
   line-height: 1;
 }
 
-
-.footer_to_top{
+.footer_to_top {
   display: block;
   margin: auto 23px 0 0;
 }
 
-.footer_to_top img{
-    border-radius: 30%;
+.footer_to_top img {
+  border-radius: 30%;
 }
 
-@media screen and (min-width:768px){
-  footer>.container{
-  height: 145px;
+@media screen and (min-width:768px) {
+  footer>.container {
+    height: 145px;
   }
-  .footer_content{
+
+  .footer_content {
     justify-content: space-between;
   }
-  .footer_nav_ul{
+
+  .footer_nav_ul {
     margin-left: 100px;
   }
-  .footer_logos{
+
+  .footer_logos {
     margin-left: 50px;
     width: 180px;
   }
@@ -335,7 +340,6 @@ footer>.container{
 /* ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 サンドボックス
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ */
-
-.blank{
+.blank {
   height: 800px;
 }
