--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   line-height: 1.8;
   font-family: "UD デジタル 教科書体 N-B";
   color: #fff;
+  background: url(../media/bg_dot_pa.png);
 }
 
 .container {
@@ -33,28 +34,25 @@ body {
 
 /* バックグラウンドにディープピンクストライプ */
 header, footer {
-  background: url(../media/bg_dp_st.png) repeat;
+  padding: 0 10px;
+  background: url(../media/bg_dp_st.png);
 }
 
-footer>.container {
+footer{
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:991px) {
   .container {
     padding: 0 30px;
-    width: 1170px;
-  }
-
-  header, footer {
-    min-width: 1170px;
+    max-width: 1170px;
   }
 
   /* flexプロパティたち */
   .gnav>ul,
-  header>.container,
+  header,
   .footer_content {
     display: -webkit-flex;
     display: -ms-flex;
@@ -66,6 +64,7 @@ footer>.container {
 ヘッダー
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ */
 header {
+  width: 100%;
   height: 84px;
 }
 
@@ -83,6 +82,7 @@ header {
   position: fixed;
   top: 5px;
   right: -768px;
+  z-index: 998;
   padding: 18px 0 5px;
   border: 3px solid #f172a4;
   border-radius: 10px;
@@ -177,14 +177,18 @@ header {
   opacity: 1;
 }
 
-@media screen and (min-width:768px) {
-  header {
-    position: fixed;
-  }
-  header>.container {
-    justify-content: space-between;
+@media screen and (min-width:991px) {
+
+  body{
+    padding-top: 84px;
   }
 
+  header {
+    position: fixed;
+    top: 0;
+    z-index: 997;
+    justify-content: space-between;
+  }
   .logo {
     margin: 0;
     width: 190px;
@@ -234,7 +238,7 @@ header {
 /* ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 フッター
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ */
-footer>.container {
+footer{
   height: 363px;
   justify-content: space-between;
 }
@@ -318,8 +322,8 @@ footer>.container {
   border-radius: 30%;
 }
 
-@media screen and (min-width:768px) {
-  footer>.container {
+@media screen and (min-width:991px) {
+  footer{
     height: 145px;
   }
 
