--- a/css/top0.css
+++ b/css/top0.css
@@ -5,31 +5,45 @@
 }
 
 .top-main-slider-items-pc {
-    display: none !important;
-}
-
-.top-main-slider-items-sp {
   display: block !important;
 }
 
+@media (max-width: 991px) {
+  .top-main-slider-items-pc {
+    display: none !important;
+  }
+}
+
+.top-main-slider-items-sp {
+  display: none !important;
+}
+
+@media (max-width: 991px) {
+  .top-main-slider-items-sp {
+    display: block !important;
+  }
+}
+
+.top-slick-arrow {
+  width: 50px !important;
+  height: 70px !important;
+  overflow: visible !important;
+  margin-top: -55px !important;
+  background: none !important;
+}
+
 .top-slick-arrow-topics {
-  width: 25px !important;
-  height: 80px !important;
+  width: 35px !important;
+  height: 108px !important;
   overflow: visible !important;
   margin-top: -80px !important;
   background: none !important;
 }
 
-@media screen and (min-width:991px) {
-  .top-main-slider-items-pc {
-    display: block !important;
-  }
-  .top-main-slider-items-sp {
-    display: none !important;
-  }
+@media (max-width: 991px) {
   .top-slick-arrow-topics {
-    width: 35px !important;
-    height: 108px !important;
+    width: 25px !important;
+    height: 80px !important;
   }
 }
 
@@ -41,18 +55,111 @@
   right: 0 !important;
 }
 
+
+element.style {
+    display: block;
+}
 /* ========================================
 	slick
 ======================================== */
 /* Slider */
-/* .slider {
+.slider {
   display: none;
-} */
+}
 
-/* .slider.slick-initialized {
+.slider.slick-initialized {
   display: block;
-} */
+}
 
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  /*overflow: hidden;*/
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: '';
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+
+[dir='rtl'] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
 
 .slick-arrow {
   font-size: 0;
@@ -128,8 +235,8 @@
 
 .slick-dots li:hover button {
   opacity: 0.9;
-  background-color: #E7397D;
-  border-color: #E7397D;
+  background-color: #000;
+  border-color: #000;
 }
 
 .slick-initialized .slick-slide {
